# ooai

./: Cargo.toml  Light_Paper.md  README.md  Whitepaper.md  build.rs  copyright.txt  docker-compose.yml  dockerfile
Docs/: Agents.md  DataExchange.md  Developer_Contributions.md  Flows.md  Individual_CLA.md  Overview.md  Recommendations.md  Streams.md  Tokenomics.md  iam.md  index.json  index.md  proofs.md
setup/: package-lock.json  package.json  tsconfig.json
setup/src/: add-actions.ts  add-oas.ts  add-remote-schema.ts  index.ts  types.ts
src/: lib.rs
src/agents/: base_agent.rs  knowledge_agent.rs  q_learning_agent.rs
src/api/: jwk.rs  msg.rs
src/bindings/: bokeh_bindings.rs  bokeh_charts.rs  rust_django_extensor.rs  spacy_bindings.rs
src/buffers/: payment_buffer.rs  replay_buffer.rs
src/clients/: kv.rs  neo4j.rs  pg.sql  postgres.rs
src/commons/: constants.rs  mod.rs  waiter.rs
src/config/: config.json  config.rs  globals.json
src/contracts/: developer_contract.sol  developer_contributions.rs
src/data_exchange/: data_bridging.rs  exchange_adapters.rs  exchange_core.rs  exchange_graphql.rs  exchange_interfaces.rs  mod.rs
src/data_streams/: cloudevents.rs  combine.rs  event.rs  grpc.rs  kafka.rs  mock.rs  mod.rs  mqtt.rs  topics.rs
src/encryption/: encryption.rs
src/filters/: filter_dictionary.JSON  outgoing_filter.rs
src/flows/: block_library.json  blocks.json  blocks.rs  flow_template.json  flowgorithm.rs  flows.rs  sample_flow.json
src/graphs/: delegate_graph.rs  event_graph.rs  graphs.cql  identity_graph.rs  message_entity_graph.rs  nl_to_graph.rs  personalisation_graph.rs  provider_graph.rs  schedule_graph.rs  spatial_events_graph.rs  user_graph.rs
src/iam/: did.rs  group.rs  iam.rs  jwt.rs  keycloak_provider.rs  merkle_tree.rs  public_key_store.rs  user.rs  user_data.rs  verifiable_credentials.rs  wallet.rs
src/messaging/: app_state.rs  consensus.rs  decentralised_messaging.rs  message.rs  message_classifier.rs  message_encryption.rs  message_hashmap.rs  message_metadata.rs  message_routing.rs  messaging_core.rs  messaging_providers.rs  multi_modal_inputs.rs  pii_handler.rs  route_classifier.rs
src/nlu/: detect_language.rs  ted_policy_configuration.rs  text_pipeline.rs  text_processors.rs
src/protos/: my_grpc_service.proto  my_grpc_service.rs
src/provider_types/: ai.rs  charts.rs  payments.rs  search.rs
src/providers/: anthropic.rs  openai.rs  telegram.rs  wikipedia.rs
src/recommendations/: event_recommendations.rs  rlhf.rs  visualiser.rs
static/: bigbot_message_schema.json  block_templates.json  developer_nft.json  pii_masking.yml  providers.json  rest_swagger.yml  user.graphql  validation.json
tests/: mod.rs
(+22 files in other folders)
