[package]
name = "bigbot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bigbot"
path = "src/bin/bigbot.rs"

[dependencies]
# Web frameworks and HTTP
actix-web = "4.4.0"
actix-web-httpauth = "0.8.0"
actix-ratelimit = "0.3.1"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
poem = "1.3.58"
warp = "0.3.7"

# Database and storage
diesel = "2.1.5"
etcd-client = "0.12.4"
neo4rs = "0.7.1"
tikv-client = "0.3.0"
tokio-postgres = "0.7.10"

# Serialization and deserialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"

# Async and concurrency
async-stream = "0.3.5"
async-trait = "0.1.73"
futures = { version = "0.3.28" }
futures-core = "0.3.28"
futures-util = "0.3.28"
pin-project-lite = "0.2.13"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-stream-ext = "0.1.5"

# Cryptography and security
aes-gcm = "0.10.3"
jsonwebtoken = "8.3.0"
sha3 = "0.10.8"
x25519-dalek = "2.0.1"
curve25519-dalek = "4.1.2"

# Messaging and event-driven architectures
cloudevents-sdk = { version = "0.7", features = ["rdkafka"] }
kafka = "0.10.0"
nats = "0.24.0"
rdkafka = "0.29.0"
rumqttc = "0.24.0"

# gRPC and protocol buffers
grpcio = "0.13.0"
prost = "0.12.4"
prost-types = "0.12.4"
tonic = "0.11.0"

# GraphQL
async-graphql = "6.0.6"
async-graphql-poem = "6.0.6"

# Interoperability and FFI
js-sys = "0.3.69"
libloading = "0.8.3"
pyo3 = "0.20.3"
wasm-bindgen = "0.2.92"

# Networking and protocols
iroh = "0.14.0"
iroh-bytes = "0.14.0"
iroh-net = "0.14.0"
libp2p = "0.53.2"
ockam = "0.118.0"
ockam_core = "0.103.0"
ockam_node = "0.110.0"
ockam_transport_websocket = "0.99.0"
ockam_vault = "0.108.0"
quic-rpc = "0.8.0"
reqwest = { version = "0.11", features = ["json"] }

# Utilities and helpers
base64 = "0.21"
bytes = "1.5.0"
chrono = "0.4.30"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4"
num_cpus = "1.16.0"
rand = "0.8.5"
regex = "1.10.4"
semver = "1.0.22"
thiserror = "1.0.48"
tracing = "0.1.37"
url = "2.5.0"
uuid = "1.4"
weak-table = "0.3.2"
zeroize = "1.7.0"

# Machine learning and inference
tract = "0.21.4"

# Blockchain and smart contracts
web3 = "0.19.0"
# solana-sdk = "1.18.12"
# solana-account-decoder = "1.18.12"
# solana-program-runtime = "1.18.12"
# spl-token = { version = "4.0.1", features = ["no-entrypoint"] }

# Messaging Integrations
teloxide = "0.12.2"
teloxide-core = "0.9.1"

[patch.crates-io]


[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
rand = "0.8.5"
